--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,12 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.1.3
   uuid: ^3.0.4
-
+  material_color_generator: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_advanced_drawer: ^1.3.2
 
 dev_dependencies:
   flutter_test:
