--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   flutter_riverpod: ^2.1.3
   uuid: ^3.0.4
   material_color_generator: ^1.1.0
-  readmore: ^2.1.0
+  go_router: ^6.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
