--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   uuid: ^3.0.4
   material_color_generator: ^1.1.0
   go_router: ^6.0.1
-
+  shared_preferences: ^2.0.16
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
