--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_riverpod: ^2.1.3
   uuid: ^3.0.4
   material_color_generator: ^1.1.0
+  draggable_fab: ^0.1.1
   go_router: ^6.0.1
   shared_preferences: ^2.0.16
   # The following adds the Cupertino Icons font to your application.
